--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,44 @@
 		<title>My WebPack App</title>
 	</head>
 	<body>
-		<h1>Webpacky</h1>
+		<div id="content"></div>
+		<!-- <div id="content">
+			<header>
+				<h1>Home</h1>
+				<h1>Menu</h1>
+				<h1>Contact</h1>
+			</header>
+			<main>
+				<div class="content-card">
+					<section>
+						<h1 class="title">Resty-Runts</h1>
+					</section>
+					<section>
+						<h2 class="sub-title">Who are we?</h2>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit. Assumenda, harum.
+						</p>
+					</section>
+					<section>
+						<h2 class="sub-title">Hours</h2>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit. Assumenda, harum.
+						</p>
+					</section>
+					<section>
+						<h2 class="sub-title">Directions</h2>
+						<p>
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit. Assumenda, harum.
+						</p>
+					</section>
+				</div>
+			</main>
+			<footer>
+				<h4>Created by: Jack Sebben</h4>
+			</footer>
+		</div> -->
 	</body>
 </html>
